# urdf-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: helper.cmake
matlab-scripts/: R2q.m  elemR.m  euler2R.m  example_dp.m  example_mp.m  example_sp.m  main.m  q2R.m  randR.m  randq.m  skew.m  spring2024mid_p25.m
resource/2DrobotArm/: robot_3D.urdf
resource/anymal_c/urdf/: anymal_TEST.urdf  anymal_prismatic.urdf  robot_3D.urdf
resource/cartPole/: doubleCartPole.urdf
resource/minitaur/: minitaur.urdf
resource/pogo/: CMakeLists.txt  package.xml
resource/pogo/config/: joint_names_pogo_test.yaml
resource/pogo/launch/: display.launch  gazebo.launch
resource/pogo/meshes/: base_pogo.STL  cross.STL  foot.STL  guide.STL  mass.STL  tip.STL
resource/pogo/urdf/: pogo.urdf  pogo_1D.urdf  pogo_test.csv
resource/urdf-head/: CMakeLists.txt  package.xml
resource/urdf-head/config/: joint_names_urdf-head.yaml
resource/urdf-head/launch/: display.launch  gazebo.launch
resource/urdf-head/urdf/: urdf-head.csv  urdf-head.urdf  urdf-head_fixed.urdf
solutions/: exercise_1_20190673.hpp  exercise_2_20190673.hpp  exercise_3_20190673.hpp  exercise_4_20190673.hpp  exercise_5_20190673.hpp  fin-prep_20190673.hpp  final_exam_20190673.hpp
src/: ex-fin-fixed_chh.cpp  ex-fin_chh.cpp  ex1_chh.cpp  ex2_chh.cpp  ex3_chh.cpp  ex4_chh.cpp  ex5_chh.cpp  ex_TEMPLATE.cpp  exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp  exercise5.cpp  final_exam.cpp  frame_timer.hpp  head_test.cpp  pogo_1D.cpp  pogo_sandbox.cpp  pogo_showcase.cpp  raipal.cpp  raipal_4-bar.cpp  raipal_IK.cpp  raipal_fk.cpp  raipal_ik-lib.cpp  raipal_ik.cpp  raipal_ik_backup-2.cpp  raipal_ik_backup-3.cpp  raipal_ik_backup.cpp  raipal_mass-analysis.cpp  raipal_pd-compare.cpp  raipal_pd.cpp  raipal_ragdoll.cpp  raipal_throw.cpp  random_coordinates.hpp
src/_utils/: inertia.txt  table_printer.hpp
src/head/: test.cpp
src/minitaur/: example.cpp  ragdoll.cpp
src/raipal/: ArticulatedRaipal.hpp  _fidelity-0.cpp  _fidelity-1.cpp  cfbParameters.hpp
src/raipal9/: fk.cpp  ik-lib.cpp  pd-compare.cpp  throw.cpp
src/utils/: generate_entries.py
